--- a/client/src/css/factura.module.css
+++ b/client/src/css/factura.module.css
@@ -62,3 +62,15 @@
 .styledTable2 td {
     padding: 2px 8px;
 }
+
+.styledTable3{
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 1000px;
+    box-shadow: 0 0 20px rgb(0 0 0 / 15%);
+   background-color: rgb(171, 163, 163);
+   color:white;
+   font-weight: bold;
+   font-size: larger;
+}
