--- a/client/src/css/cliente.css
+++ b/client/src/css/cliente.css
@@ -20,28 +20,66 @@
 }
 
 .nibbotBtn:hover {
-    background: #1C6EA4;
+	background: #1C6EA4;
 }
 
 .nibbotBtn:active {
     background: #144E75;
 }
 
-
-.form_style_list{
-	max-width:800px;
+.form_style{
+	max-width:1000px;
 	margin:50px auto;
 	background:#fff;
 	border-radius:5px;
 	padding:20px;
+	
 }
-.form_style_list h1{
+
+.form_style h1{
 	display: block;
 	text-align: center;
 	padding: 0;
 	margin: 0px 0px 20px 0px;
 	color: #5C5C5C;
 	font-size:x-large;
+}
+
+.form_style tr {
+	height: 35px;
+	/* border: solid 1px; */
+}
+
+.form_style input[type="text"]
+{
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	display: block;
+	outline: none;
+	height: 25px;
+	line-height: 25px;
+	font-size: 16px;
+	padding: 0;
+	font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+
+.tdTitulo{
+	width:8%;
+	text-align: right;
+	padding: 10px;
+}
+.tdSmall {
+	width: 25%;
+}
+.tdBig {
+	width: 90%;
+}
+.tdCEnter{
+	text-align: -webkit-center;
+	background-color: #009879;;
+	color: white;
 }
 .form_style_list ul{
 	list-style:none;
@@ -72,6 +110,9 @@
 	overflow: hidden;
 	font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
 
 .form_style_list input[type="number"]{
 	text-align-last: end;
@@ -106,7 +147,6 @@
 	width: 100%;
 	display: block;
 	outline: none;
-	border: none;
 	height: 25px;
 	line-height: 25px;
 	font-size: 16px;
