--- a/client/src/css/factura.module.css
+++ b/client/src/css/factura.module.css
@@ -44,7 +44,10 @@
 .dLink{
 	text-decoration: unset;
 }
-
+.row_green{
+    color:darkgreen;
+    font-weight: bold;    
+}
 .redRow{
     background-color:red;
 }
