--- a/client/src/css/factdetPdf.module.css
+++ b/client/src/css/factdetPdf.module.css
@@ -2,7 +2,7 @@
     max-width: 850px;
     width: 100%;
     display: table;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     padding: 20px 10px;
   }
   .cabecera {
@@ -35,6 +35,9 @@
     margin: 6px;
     padding: 5px;
 }
+.addprod2p {
+    text-align: left;
+}
 .addprod {
     width           : 90%;
     height          : auto;
@@ -43,7 +46,7 @@
     font-size       : 16px;
     display         : flex;
     justify-content : left;
-    align-items: center;
+    align-items: left;
 }
 
 .detalleCab {
