--- a/client/src/css/factdet.css
+++ b/client/src/css/factdet.css
@@ -46,7 +46,11 @@
     justify-content : left;
     align-items: center;
 }
-
+.costoEnvio{
+    width: 200px;
+    padding-right: 15px;
+    font-weight: bold
+}
 .detalleCab {
     width           : 90%;
     background-color: white;
@@ -58,6 +62,14 @@
 }
 .total {
     background-color: white;
+    width           : 90%;
+    height          : auto;
+    font-family     : Arial, Helvetica, sans-serif;
+    font-size       : 16px;
+    display         : flex;
+    justify-content : left;
+    align-items: center;
+    
 }
 
 .totaltr {
