--- a/client/src/css/Pdf.module.css
+++ b/client/src/css/Pdf.module.css
@@ -1,22 +1,33 @@
+@page { margin: 0; }
+
 .Post{
-    max-width: 850px;
+    max-width: 800px;
     width: 100%;
     display: table;
     /* margin: 0 auto; */
     padding: 20px 10px;
   }
   .cabecera {
-    width           : 90%;
-    /* padding: 10PX; */
-    margin-top      : 10px;
-    height          : 174px;
-    background-color: #d1e7dd;
-    font-family     : Arial, Helvetica, sans-serif;
-    font-size       : 16px;
-    justify-content : space-around;
+    width              : 90%;
+    padding            : 10PX;
+    margin-top         : 10px;
+    height             : 80px;
+    /* background-color: #a3d7f8; */
+    font-family        : Arial, Helvetica, sans-serif;
+    font-size          : 14px;
+    justify-content    : space-around;
     /* box-shadow      : 13px 14px 15px 5px rgba(0, 0, 0, 0.34); */
 }
 
+.cabeceraCondGral{
+    border: 2px solid grey;
+    margin: 5px;
+    width: 90%;
+    font-size       : 14px;
+}
+.cabeceraCondGral table{
+    width: 95%;
+}
 .cabeceraAlta {
     width           : 90%;
     padding: 10PX;
@@ -43,7 +54,7 @@
     height          : auto;
     background-color: #d1e7dd;;
     font-family     : Arial, Helvetica, sans-serif;
-    font-size       : 16px;
+    font-size       : 12px;
     display         : flex;
     justify-content : left;
     align-items: left;
@@ -76,7 +87,7 @@
 }
 
 .row {
-    height   : 25px;
+    height   : 40px;
     font-size: 16px;
     display:flex;
     justify-content: space-around;
@@ -94,7 +105,13 @@
 .colCab0{
     width: 90%;
     text-align: -webkit-left;
-    padding-top: 15px;
+    padding-top: 5px;
+}
+
+.colCab3 {
+    width          : 90%;
+    display        : flex;
+    justify-content: space-between;
 }
 
 .bg-red {
@@ -124,4 +141,34 @@
 .incluido{
     text-align: center;
     font-weight: bold;
+}
+.hr{
+    width:75%;
+    background-color: #3002d7;
+    height: 5px;
+}
+
+.unidades{
+    border-bottom: 1px solid #3002d7;
+    height: 12px;
+}
+.terminos{
+    border: 2px solid grey;
+    margin: 5px;
+    font-size          : 12px;
+    width:90%
+}
+
+.terminos table{
+    width: 95%;
+}
+
+.nibbot{
+    background-color: lightgray;
+    color: white;
+    width:90%;
+    font-size: 14px;
+}
+.titNumber{    
+    font-size: 24px;
 }
