--- a/client/src/css/factdet.css
+++ b/client/src/css/factdet.css
@@ -22,7 +22,7 @@
     width           : 90%;
     padding: 10PX;
     margin-top      : 10px;
-    height          : 98px;
+    height          : 132px;
     background-color: #d1e7dd;
     font-family     : Arial, Helvetica, sans-serif;
     font-size       : 16px;
@@ -63,7 +63,8 @@
     box-shadow      : 13px 14px 15px 5px rgba(0, 0, 0, 0.34);
 }
 .detalle{
-    margin:7px;
+    margin : 7px;
+    width  : 69%;
     display: inline-block;
 }
 .total {
@@ -227,6 +228,10 @@ button:focus {
 }
 .input_text {
     width          : 250px;
+    border-color   : 0.5px solid lightgray;
+}
+.input_text_mail {
+    width          : 450px;
     border-color   : 0.5px solid lightgray;
 }
 .incluido{
