--- a/client/src/css/all.css
+++ b/client/src/css/all.css
@@ -1,3 +1,8 @@
+.ordenado{
+    cursor: pointer;
+    color:blue
+}
+
 .divhead {
 	display    : flex;
 	align-items: center;
@@ -244,7 +249,7 @@
 }
 
 .divlbldir {
-	text-align: left;
+	text-align: center;
 	padding   : 10px;
 	font-size : 24px;
 }
@@ -273,3 +278,47 @@
 	left: 100%;
 	margin-top: -1px;
   }
+
+
+  	.hideMenuNav {
+	  display: none;
+	}
+	.showMenuNav {
+	  display: block;
+	  position: absolute;
+	  width: 100%;
+	  height: 100vh;
+	  top: 0;
+	  left: 0;
+	  background: white;
+	  z-index: 10;
+	  display: flex;
+	  flex-direction: column;
+	  justify-content: space-evenly;
+	  align-items: center;
+	}
+  
+	.showHamburger {
+		display:none;
+		
+	}
+
+  @media (max-width: 768px) {
+    .showbell{
+        display: none;
+    }
+	.divhead{
+		display: table-caption;
+		align-items: center;
+		list-style: none;
+		/* background-color: #471fcb;
+		color: whitesmoke; */
+	}
+	.divhead2{
+		display: none;
+	}	
+	.showHamburger {
+		display:block;
+		align-items: right;
+	}
+}
