--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
+:root {
+  --main-otra-cia-color: rgb(25, 161, 27);
+  --main-panel-color: white;
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -23,9 +29,9 @@ header {
 .nav-area {
   display: flex;
   align-items: center;
-  max-width: 1200px;
+  max-width: 90%;
   margin: 0 auto;
-  padding: 10px 20px;
+  padding: 2px 8px;
 }
 
 .logo {
@@ -130,4 +136,13 @@ button span {
 .content a {
   color: #cc3852;
   margin-right: 10px;
+}
+
+
+
+@media (max-width: 768px) {
+  body {
+    background-image: none;
+  }
+  
 }
