--- a/client/src/css/all.css
+++ b/client/src/css/all.css
@@ -254,6 +254,14 @@
 	font-size : 24px;
 }
 
+.tdNormal{
+    color:black;
+}
+.tdOtraCia{
+    color:var(--main-otra-cia-color);
+}
+
+
 @keyframes glowing {
 	0% {
 		background-position: 0 0;
