--- a/client/src/css/factdet.module.css
+++ b/client/src/css/factdet.module.css
@@ -24,7 +24,7 @@
     box-shadow     : 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-.styledtable thead tr {
+.styledtable tr {
     border-radius   : 25px;
     background-color: #009879;
     color           : #ffffff;
